# gaia

./: .gitignore  Cargo.toml  README.md  geo_substream.spkg  justfile
actions-indexer/: Cargo.toml  README.md  geo-actions-v0.1.0.spkg
actions-indexer-loader/: Cargo.toml
actions-indexer-loader/src/: lib.rs
actions-indexer-loader/src/errors/: mod.rs
actions-indexer-orchestrator/: Cargo.toml
actions-indexer-orchestrator/src/: lib.rs
actions-indexer-orchestrator/src/errors/: mod.rs
actions-indexer-pipeline/: Cargo.toml  README.md
actions-indexer-pipeline/src/: lib.rs
actions-indexer-pipeline/src/consumer/: mod.rs
actions-indexer-pipeline/src/errors/: consumer.rs  loader.rs  mod.rs  orchestrator.rs  processor.rs
actions-indexer-pipeline/src/loader/: mod.rs
actions-indexer-pipeline/src/orchestrator/: mod.rs
actions-indexer-pipeline/src/processor/: actions_processor.rs  mod.rs
actions-indexer-repository/: Cargo.toml  README.md
actions-indexer-repository/.sqlx/: query-2c1738b02c690e7ae58c9cb9bc1bdd6480e5481a3ca1e86a2212178cb7a68e32.json  query-4ee574f855ea57e376d7b1dc56f297a34e2c2d74837ea8ea1767b9d4818e1a3d.json  query-61f9ac2d71d216d3a4a229e70de8c1958a73ad1e767d870ed5652fc101078497.json  query-78ef763a3de3da2bfccd844336b470e28e4597922282898b8eb709476724feb6.json  query-b980c49435ac06de69cb487a1190a5cf257675eee58f3b5d21100572faa8f5d1.json  query-ea4687b7fbd07b829d5aa5d6150dce01548452fa4d3c4b9b9239b1ca783a026a.json  query-eb4aade9dab43a545353ac8a458780391c189ac3787115ae9faaf15f746d58b9.json
actions-indexer-repository/src/: lib.rs
actions-indexer-repository/src/errors/: actions.rs  cursor_repository.rs  mod.rs
actions-indexer-repository/src/interfaces/: actions.rs  cursor_repository.rs  mod.rs
actions-indexer-repository/src/postgres/: actions_repository.rs  cursor_repository.rs  mod.rs
actions-indexer-repository/tests/: postgres_actions.rs  postgres_cursor.rs  postgres_integration.rs
actions-indexer/benches/: processing.rs
actions-indexer/src/: lib.rs  main.rs
actions-indexer/src/config/: dependencies.rs  mod.rs
actions-indexer/src/errors/: mod.rs
actions-indexer/src/package/: geo-actions-v0.1.0.spkg
atlas/: Cargo.toml  Dockerfile  README.md
atlas/benches/: canonical.rs  transitive.rs
atlas/docs/: canonical-graph-implementation.md  known-issues.md
atlas/src/: convert.rs  events.rs  lib.rs  main.rs  mock_substream.rs
atlas/src/graph/: canonical.rs  memory.rs  mod.rs  transitive.rs
atlas/src/kafka/: emitter.rs  mod.rs  producer.rs
hermes-ipfs-cache/: Cargo.toml  Dockerfile  README.md
hermes-ipfs-cache/docs/: architecture.md
hermes-ipfs-cache/docs/decisions/: 0001-cursor-persistence.md
hermes-ipfs-cache/docs/plans/: 0001-k8s-deployment.md
hermes-ipfs-cache/src/: cache.rs  lib.rs  main.rs
hermes-producer/: Cargo.toml  Dockerfile  README.md
hermes-producer/src/: main.rs
hermes-relay/: Cargo.toml
hermes-relay/docs/decisions/: 0001-multiple-substreams-modules-consumers.md
hermes-relay/docs/plans/: 0001-mock-substream-integration.md  0002-mock-ipfs-client.md  0003-hermes-processor-migration.md
hermes-relay/src/: actions.rs  config.rs  lib.rs  sink.rs
hermes-relay/src/source/: mock.rs  mock_events.rs  mod.rs
hermes-spaces/: Cargo.toml  Dockerfile  README.md
hermes-spaces/src/: conversion.rs  kafka.rs  main.rs  transformer.rs
hermes-substream/: Cargo.toml  README.md  hermes-substream.spkg  substreams.yaml
hermes-substream/abis/: space-registry.json
hermes-substream/docs/: modifying-events.md
hermes-substream/proto/: schema.proto
hermes-substream/src/: helpers.rs  lib.rs
hermes-substream/src/pb/: .last_generated_hash  hermes.rs  mod.rs
poc-edit-decoder/: Cargo.toml  README.md
poc-edit-decoder/src/: main.rs
poc-edit-ingest/: Cargo.toml  README.md
poc-edit-ingest/data/: random-rankings.csv
poc-edit-ingest/src/: config.rs  lib.rs  main.rs  models.rs  neo4j_writer.rs
poc-edit-ingest/src/decoder/: mod.rs  worker.rs
poc-edit-ingest/src/server/: handlers.rs  mod.rs  state.rs
poc-edit-ingest/src/storage/: dual_writer.rs  initializer.rs  mod.rs
poc-neo4j-migrate/: Cargo.toml  README.md
poc-neo4j-migrate/src/: config.rs  lib.rs  main.rs  models.rs
poc-neo4j-migrate/src/migration/: executor.rs  mod.rs
poc-neo4j-migrate/src/neo4j/: connection.rs  indexer.rs  mod.rs  writer.rs
poc-neo4j-migrate/src/postgres/: connection.rs  mod.rs  reader.rs
scoring-service/: .env.example  Dockerfile  README.md  docker-compose.yaml  justfile  main.py  pyproject.toml
scoring-service/deployment/: cronjob.yaml
scoring-service/src/: constants.py
scoring-service/src/algorithm/: __init__.py  models.py  scoring.py  utils.py
scoring-service/src/ranking_data_provider/: __init__.py  ranking_data_provider.py
scoring-service/src/scoring_data_provider/: __init__.py  scoring_data_provider.py
scoring-service/src/scoring_data_writer/: __init__.py  scoring_data_writer.py
scoring-service/tests/: test_main.py  test_ranking_data_provider.py  test_ranking_engine_api.py  test_scoring_data_provider.py  test_scoring_data_writer.py
search-indexer/: Cargo.toml  Dockerfile  README.md
search-indexer-repository/: ARCHITECTURE.md  Cargo.toml  README.md
search-indexer-repository/src/: config.rs  lib.rs  service.rs  types.rs  utils.rs
search-indexer-repository/src/errors/: mod.rs  search_index_error.rs
search-indexer-repository/src/interfaces/: mod.rs  search_index_provider.rs
search-indexer-repository/src/opensearch/: index_config.rs  mod.rs  provider.rs
search-indexer-shared/: Cargo.toml  README.md
search-indexer-shared/src/: lib.rs
search-indexer-shared/src/types/: entity_document.rs  mod.rs  search_query.rs  search_result.rs
search-indexer/src/: lib.rs  main.rs
search-indexer/src/config/: dependencies.rs  mod.rs
search-indexer/src/consumer/: kafka_consumer.rs  messages.rs  mod.rs
search-indexer/src/errors/: mod.rs
search-indexer/src/loader/: mod.rs
search-indexer/src/orchestrator/: mod.rs
search-indexer/src/processor/: mod.rs  (+1 more)
search-indexer/tests/: orchestrator_integration.rs
(+248 files in other folders)
