[workspace]
members = [
    "stream",
    "indexer",
    "indexer_utils",
    "wire",
    "cache",
    "ipfs",

    "actions-indexer",
    "actions-indexer-pipeline",
    "actions-indexer-shared",
    "actions-indexer-repository",
    "actions-substream"
, "poc-edit-decoder"]
# `substreams build` doesn't seem to work well when in a workspace. The CLI looks to
# read the target directory from within indexer-substream, but the workspace hoists
# it to the workspace root.
exclude = ["indexer-substream"]
resolver = "2"
