[workspace]
members = [
    "stream",
    "indexer",
    "indexer_utils",
    "wire",
    "cache",
    "ipfs",

    "actions-indexer",
    "actions-indexer-pipeline",
    "actions-indexer-shared",
    "actions-indexer-repository",
    "actions-substream",

    "search-indexer",
    "search-indexer-shared",
    "search-indexer-repository",

    "sdk",

    "hermes-kafka",
    "hermes-schema",
    "hermes-processor",
    "hermes-relay",
    "hermes-spaces",
    "hermes-ipfs-cache",

    "atlas",
    "mock-substream",
    "hermes-substream",
]
# `substreams build` doesn't work well when in a workspace. The CLI looks for the
# target directory within the substream crate, but the workspace hoists it to the
# workspace root. indexer-substream still uses prost 0.11, so it remains excluded.
exclude = ["indexer-substream"]
resolver = "2"
