[package]
name = "actions-indexer-orchestrator"
version = "0.1.0"
edition = "2024"

[dependencies]
futures03 = { version = "0.3.1", package = "futures", features = ["compat"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "json",
    "uuid",
    "chrono",
    "time",
] }
thiserror = "2.0.12"
actions-indexer-consumer = { path = "../actions-indexer-consumer" }
actions-indexer-processor = { path = "../actions-indexer-processor" }
actions-indexer-loader = { path = "../actions-indexer-loader" }