[package]
name = "actions-indexer-pipeline"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "json",
    "uuid",
    "chrono",
    "time",
] }
thiserror = "2.0.12"
actions-indexer-shared = { path = "../actions-indexer-shared" }
actions-indexer-repository = { path = "../actions-indexer-repository" } 
anyhow = "1"
async-stream = "0.3"
reqwest = "0.11"
tokio = { version = "1.27", features = [
    "time",
    "sync",
    "macros",
    "test-util",
    "rt-multi-thread",
    "parking_lot",
] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-retry = "0.3"
tonic = { version = "0.12", features = ["gzip", "tls-roots"] }
prost = "0.13"
prost-types = "0.13"
chrono = "0.4.38"
regex = "1.11.1"
lazy_static = "1.5.0"
semver = "1.0.23"

[dev-dependencies]
alloy = "1.0.24"
uuid = "1.18.0"
