[package]
name = "actions-indexer-repository"
version = "0.1.0"
edition = "2024"

[dependencies]
actions-indexer-shared = { path = "../actions-indexer-shared" }
async-trait = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate", "time", "macros"] }
thiserror = "1.0"
hex = "0.4.3"
alloy = "1.0.24"
uuid = { version = "1.18.0", features = ["v4"] }
time = "0.3.41"