[package]
name = "actions-indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "json",
    "uuid",
    "chrono",
    "time",
] }
actions-indexer-types = { path = "../actions-indexer-types" }
actions-indexer-consumer = { path = "../actions-indexer-consumer" }
actions-indexer-processor = { path = "../actions-indexer-processor" }
actions-indexer-loader = { path = "../actions-indexer-loader" }
actions-indexer-orchestrator = { path = "../actions-indexer-orchestrator" }
