[package]
name = "actions-indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "json",
    "uuid",
    "chrono",
    "time",
] }
thiserror = "2.0.12"
actions-indexer-pipeline = { path = "../actions-indexer-pipeline" }
actions-indexer-shared = { path = "../actions-indexer-shared" }
actions-indexer-repository = { path = "../actions-indexer-repository" }
