[package]
name = "atlas"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "atlas"
path = "src/main.rs"

[[bench]]
name = "transitive"
harness = false

[[bench]]
name = "canonical"
harness = false

[dependencies]
rand = "0.8"
hex = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
