[package]
name = "atlas"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "atlas"
path = "src/main.rs"

[[bench]]
name = "transitive"
harness = false

[[bench]]
name = "canonical"
harness = false

[dependencies]
hex = "0.4"
prost = "0.13.5"
rdkafka = { version = "0.36", features = ["cmake-build", "zstd", "ssl"] }
hermes-schema = { path = "../hermes-schema" }
hermes-relay = { path = "../hermes-relay" }
tokio = { version = "1.41", features = ["rt-multi-thread", "macros"] }
anyhow = "1"
thiserror = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
