[package]
name = "hermes-ipfs-cache"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "hermes-ipfs-cache"
path = "src/main.rs"

[dependencies]
hermes-relay = { path = "../hermes-relay" }
hermes-substream = { path = "../hermes-substream" }
ipfs = { path = "../ipfs" }
wire = { path = "../wire" }

anyhow = "1"
chrono = "0.4"
dotenv = "0.15"
hex = "0.4"
prost = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "json",
    "uuid",
] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = "1"
