[package]
name = "hermes-relay"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
stream = { path = "../stream" }
hermes-substream = { path = "../hermes-substream" }
anyhow = "1"
async-trait = "0.1"
tokio = { version = "1.41", features = ["sync"] }
prost = "0.13"
thiserror = "1"
futures03 = { version = "0.3.1", package = "futures", features = ["compat"] }
