[package]
name = "hermes_substream"
version = "0.1.0"
edition = "2021"

[lib]
name = "hermes_substream"
crate-type = ["cdylib"]

[dependencies]
substreams = "0.5.12"
substreams-ethereum = "0.9"
prost = "0.11"
prost-types = "0.11"
ethabi = "18.0.0"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
