[project]
name = "scoring-service"
version = "0.1.0"
description = "A Python runtime for calculating Geo scores"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy==2.3.5",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --cov=. --cov-report=term-missing"

[tool.coverage.run]
source = ["."]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
