[package]
name = "search-indexer-shared"
version = "0.1.0"
edition = "2021"
description = "Shared types and data structures for the search indexer system"

[dependencies]
uuid = { version = "1.17.0", features = ["v4", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"

